--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -130,13 +130,13 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/changeTitleDetails"
+                android:id="@+id/changeTitleTrade"
                 android:layout_width="163dp"
                 android:layout_height="wrap_content"
                 android:text="Change: " />
 
             <TextView
-                android:id="@+id/changeTextDetails"
+                android:id="@+id/changeTextTrade"
                 android:layout_width="114dp"
                 android:layout_height="wrap_content"
                 android:text="TextView" />
