--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,184 +1,206 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".DetailsActivity">
 
-    <include
-        android:id="@+id/details_toolbar"
-        layout="@layout/custom_toolbar" />
 
-    <TableLayout
-        android:id="@+id/tableLayout"
-        android:layout_width="409dp"
-        android:layout_height="92dp"
-        android:layout_marginBottom="640dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+<ScrollView
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_weight="1"
+android:fillViewport="true">
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:id="@+id/main"
+        tools:context=".DetailsActivity">
 
-            <TextView
-                android:id="@+id/company_ticker"
-                android:layout_width="163dp"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
+        <include
+            android:id="@+id/details_toolbar"
+            layout="@layout/custom_toolbar" />
 
-            <TextView
-                android:id="@+id/current_price"
-                android:layout_width="114dp"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
-        </TableRow>
+        <TableLayout
+            android:id="@+id/tableLayout"
+            android:layout_width="409dp"
+            android:layout_height="92dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/company_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
+                <TextView
+                    android:id="@+id/company_ticker"
+                    android:layout_width="163dp"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
 
-            <TextView
-                android:id="@+id/change"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
-        </TableRow>
+                <TextView
+                    android:id="@+id/current_price"
+                    android:layout_width="114dp"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+            </TableRow>
 
-    </TableLayout>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/Portfolio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="10dp"
-        android:text="Portfolio"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
+                <TextView
+                    android:id="@+id/company_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
 
-    <TableLayout
-        android:id="@+id/tableLayout2"
-        android:layout_width="278dp"
-        android:layout_height="97dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Portfolio">
+                <TextView
+                    android:id="@+id/change"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+            </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        </TableLayout>
 
-            <TextView
-                android:id="@+id/sharesOwnedTitle"
-                android:layout_width="163dp"
-                android:layout_height="wrap_content"
-                android:text="Shares Owned: " />
+        <TextView
+            android:id="@+id/Portfolio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Portfolio"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/details_toolbar"
+            android:layout_marginTop="5dp" />
 
-            <TextView
-                android:id="@+id/sharesOwnedText"
-                android:layout_width="114dp"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
-        </TableRow>
+        <TableLayout
+            android:id="@+id/tableLayout2"
+            android:layout_width="278dp"
+            android:layout_height="97dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Portfolio">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/avgCostShareTitle"
-                android:layout_width="163dp"
-                android:layout_height="wrap_content"
-                android:text="Avg. Cost / Share: " />
+                <TextView
+                    android:id="@+id/sharesOwnedTitle"
+                    android:layout_width="163dp"
+                    android:layout_height="wrap_content"
+                    android:text="Shares Owned: " />
 
-            <TextView
-                android:id="@+id/avgCostShareText"
-                android:layout_width="114dp"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
-        </TableRow>
+                <TextView
+                    android:id="@+id/sharesOwnedText"
+                    android:layout_width="114dp"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+            </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/totalCostTitle"
-                android:layout_width="163dp"
-                android:layout_height="wrap_content"
-                android:text="Total Cost: " />
+                <TextView
+                    android:id="@+id/avgCostShareTitle"
+                    android:layout_width="163dp"
+                    android:layout_height="wrap_content"
+                    android:text="Avg. Cost / Share: " />
 
-            <TextView
-                android:id="@+id/totalCostText"
-                android:layout_width="114dp"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
-        </TableRow>
+                <TextView
+                    android:id="@+id/avgCostShareText"
+                    android:layout_width="114dp"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+            </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/changeTitleTrade"
-                android:layout_width="163dp"
-                android:layout_height="wrap_content"
-                android:text="Change: " />
+                <TextView
+                    android:id="@+id/totalCostTitle"
+                    android:layout_width="163dp"
+                    android:layout_height="wrap_content"
+                    android:text="Total Cost: " />
 
-            <TextView
-                android:id="@+id/changeTextTrade"
-                android:layout_width="114dp"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
-        </TableRow>
+                <TextView
+                    android:id="@+id/totalCostText"
+                    android:layout_width="114dp"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+            </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/marketValueTitle"
-                android:layout_width="163dp"
-                android:layout_height="wrap_content"
-                android:text="Market Value: " />
+                <TextView
+                    android:id="@+id/changeTitleTrade"
+                    android:layout_width="163dp"
+                    android:layout_height="wrap_content"
+                    android:text="Change: " />
 
-            <TextView
-                android:id="@+id/marketValueText"
-                android:layout_width="114dp"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
-        </TableRow>
+                <TextView
+                    android:id="@+id/changeTextTrade"
+                    android:layout_width="114dp"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+            </TableRow>
 
-    </TableLayout>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/tradeButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="54dp"
-        android:backgroundTint="#4CAF50"
-        android:text="TRADE"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toEndOf="@+id/tableLayout2"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
+                <TextView
+                    android:id="@+id/marketValueTitle"
+                    android:layout_width="163dp"
+                    android:layout_height="wrap_content"
+                    android:text="Market Value: " />
 
-    <include
-        layout="@layout/chart_layout"
-        android:layout_width="400dp"
-        android:layout_height="403dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="51dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/marketValueText"
+                    android:layout_width="114dp"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+            </TableRow>
+
+        </TableLayout>
+
+        <Button
+            android:id="@+id/tradeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="54dp"
+            android:backgroundTint="#4CAF50"
+            android:text="TRADE"
+            android:textColor="#FFFFFF"
+            app:layout_constraintStart_toEndOf="@+id/tableLayout2"
+            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
+
+        <include
+            android:id="@+id/include"
+            layout="@layout/chart_layout"
+            android:layout_width="400dp"
+            android:layout_height="403dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="51dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />
+
+        <include
+            layout="@layout/hourly_chart"
+            android:layout_width="400dp"
+            android:layout_height="403dp"
+            android:layout_marginStart="11dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/include" />
+
+    </LinearLayout>
+</ScrollView>
+
