--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -11,7 +11,6 @@ android:layout_height="wrap_content"
 android:layout_weight="1"
 android:fillViewport="true">
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -193,13 +192,36 @@ android:fillViewport="true">
             app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />
 
         <include
+            android:id="@+id/include_2"
             layout="@layout/hourly_chart"
             android:layout_width="400dp"
             android:layout_height="403dp"
-            android:layout_marginStart="11dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/include" />
+
+        <include
+            android:id="@+id/include_3"
+            layout="@layout/recommendations_chart"
+            android:layout_width="400dp"
+            android:layout_height="403dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/include_2"
+            />
+
+        <include
+            android:id="@+id/include_3"
+            layout="@layout/earnings_chart"
+            android:layout_width="400dp"
+            android:layout_height="403dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/include_3"
+            />
 
     </LinearLayout>
 </ScrollView>
