--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -9,13 +9,15 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:layout_weight="1"
-android:fillViewport="true">
+android:fillViewport="true"
+android:background="@color/white">
     <LinearLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:id="@+id/main"
-        tools:context=".DetailsActivity">
+        tools:context=".DetailsActivity"
+        android:background="@color/white">
 
         <include
             android:id="@+id/details_toolbar"
@@ -26,7 +28,8 @@ android:fillViewport="true">
             android:layout_width="409dp"
             android:layout_height="92dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="@color/white">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -80,7 +83,8 @@ android:fillViewport="true">
             app:tabGravity="fill"
             app:tabIndicatorColor="#3F51B5"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:tabMode="fixed" />
+            app:tabMode="fixed"
+            android:background="@color/white"/>
 
 
         <TextView
@@ -92,6 +96,7 @@ android:fillViewport="true">
             android:layout_marginBottom="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tabLayout"
+            android:background="@color/white"
              />
 
         <TableLayout
@@ -101,7 +106,8 @@ android:fillViewport="true">
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Portfolio">
+            app:layout_constraintTop_toBottomOf="@+id/Portfolio"
+            android:background="@color/white">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -212,6 +218,7 @@ android:fillViewport="true">
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/include_2"
+            android:background="@color/white"
             />
 
         <include
@@ -223,7 +230,24 @@ android:fillViewport="true">
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/include"
+            android:background="@color/white"
             />
+
+        <TextView
+            android:id="@+id/news_header"
+            android:layout_width="match_parent"
+            android:layout_height="38dp"
+            android:text="News"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/include_2"
+            android:background="@color/white"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/news_RecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"/>
+
 
     </LinearLayout>
 </ScrollView>
