--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
     <style name="AppTheme.Details" parent="Theme.AppCompat.Light.NoActionBar">
 
     </style>
+
+<!--    source: stackOverFlow , Link: https://stackoverflow.com/questions/31675420/set-round-corner-image-in-imageview-->
+    <style name="roundedCorners" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">15dp</item>
+    </style>
 </resources>
