--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -2,7 +2,7 @@
 
 
 
-<ScrollView
+<androidx.core.widget.NestedScrollView
 xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
@@ -19,9 +19,26 @@ android:background="@color/white">
         tools:context=".DetailsActivity"
         android:background="@color/white">
 
+
         <include
             android:id="@+id/details_toolbar"
             layout="@layout/custom_toolbar" />
+
+        <ProgressBar
+            android:id="@+id/details_progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:layout_constraintTop_toTopOf="@id/details_toolbar"
+            android:layout_marginTop="100dp"
+            />
+
+    <LinearLayout
+        android:id="@+id/content_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <TableLayout
             android:id="@+id/tableLayout"
@@ -245,10 +262,12 @@ android:background="@color/white">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/news_RecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"/>
-
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:nestedScrollingEnabled="false"
+            />
+    </LinearLayout>
 
     </LinearLayout>
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
 
