--- a/app/src/main/res/layout/news_dialogue.xml
+++ b/app/src/main/res/layout/news_dialogue.xml
@@ -38,7 +38,7 @@
         android:layout_width="350dp"
         android:layout_height="1dp"
         android:layout_marginTop="96dp"
-        android:background="#959191"
+        android:background="#E5E0E0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +77,7 @@
         android:id="@+id/chrome_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
         android:background="@android:color/transparent"
         app:layout_constraintEnd_toStartOf="@+id/twitter_button"
@@ -89,7 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="20dp"
         android:background="@android:color/transparent"
         app:layout_constraintStart_toEndOf="@+id/twitter_button"
         app:layout_constraintTop_toBottomOf="@+id/news_description"
@@ -99,7 +99,7 @@
         android:id="@+id/twitter_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
